main.tf
provider "aws" {}

locals {
  naming_suffix = "apps-${var.naming_suffix}"
}

module "fms" {
  source     = "github.com/ukhomeoffice/dq-tf-fms"
  appsvpc_id = "${aws_vpc.appsvpc.id}"

  opssubnet_cidr_block = "${var.route_table_cidr_blocks["ops_cidr"]}"
  fms_cidr_block       = "10.1.40.0/24"
  fms_cidr_block_az2   = "10.1.41.0/24"
  peering_cidr_block   = "10.3.0.0/16"

  az             = "${var.az}"
  az2            = "${var.az2}"
  naming_suffix  = "${local.naming_suffix}"
  route_table_id = "${aws_route_table.apps_route_table.id}"
}

module "lambda" {
  source                    = "github.com/ukhomeoffice/dq-tf-lambda"
  appsvpc_id                = "${aws_vpc.appsvpc.id}"
  dq_lambda_subnet_cidr     = "10.1.42.0/24"
  dq_lambda_subnet_cidr_az2 = "10.1.43.0/24"
  az                        = "${var.az}"
  az2                       = "${var.az2}"
  naming_suffix             = "${local.naming_suffix}"
  route_table_id            = "${aws_route_table.apps_route_table.id}"
}

module "airports_pipeline" {
  source            = "git::ssh://git@gitlab.digital.homeoffice.gov.uk:2222/dacc-dq/dq-tf-airports-pipeline.git"
  kms_key_s3        = "${aws_kms_key.bucket_key.arn}"
  lambda_subnet     = "${module.lambda.lambda_subnet}"
  lambda_subnet_az2 = "${module.lambda.lambda_subnet_az2}"
  lambda_sgrp       = "${module.lambda.lambda_sgrp}"
  rds_db_name       = "${var.rds_db_name}"
  rds_address       = "${module.internal_tableau.rds_internal_tableau_address}"
  pipeline_count    = "${var.pipeline_count}"
  naming_suffix     = "${local.naming_suffix}"
  namespace         = "${var.namespace}"
}

module "airports_input_pipeline" {
  source         = "git::ssh://git@gitlab.digital.homeoffice.gov.uk:2222/dacc-dq/dq-tf-airports-input.git"
  kms_key_s3     = "${aws_kms_key.bucket_key.arn}"
  pipeline_count = "${var.pipeline_count}"
  naming_suffix  = "${local.naming_suffix}"
  namespace      = "${var.namespace}"
}

module "rds_deploy" {
  source                       = "git::ssh://git@gitlab.digital.homeoffice.gov.uk:2222/dacc-dq/dq-tf-rds-deploy.git"
  lambda_subnet                = "${module.lambda.lambda_subnet}"
  lambda_subnet_az2            = "${module.lambda.lambda_subnet_az2}"
  lambda_sgrp                  = "${module.lambda.lambda_sgrp}"
  rds_db_name                  = "${var.rds_db_name}"
  rds_internal_tableau_address = "${module.internal_tableau.rds_internal_tableau_address}"
  pipeline_count               = "${var.pipeline_count}"
  naming_suffix                = "${local.naming_suffix}"
  namespace                    = "${var.namespace}"
}

module "oag_input_pipeline" {
  source         = "git::ssh://git@gitlab.digital.homeoffice.gov.uk:2222/dacc-dq/dq-tf-oag-input-pipeline.git"
  kms_key_s3     = "${aws_kms_key.bucket_key.arn}"
  pipeline_count = "${var.pipeline_count}"
  naming_suffix  = "${local.naming_suffix}"
  namespace      = "${var.namespace}"
}

module "oag_transform_pipeline" {
  source         = "git::ssh://git@gitlab.digital.homeoffice.gov.uk:2222/dacc-dq/dq-tf-oag-transform-pipeline.git"
  kms_key_s3     = "${aws_kms_key.bucket_key.arn}"
  pipeline_count = "${var.pipeline_count}"
  naming_suffix  = "${local.naming_suffix}"
  namespace      = "${var.namespace}"
}

module "acl_input_pipeline" {
  source         = "git::ssh://git@gitlab.digital.homeoffice.gov.uk:2222/dacc-dq/dq-tf-acl-input-pipeline.git"
  kms_key_s3     = "${aws_kms_key.bucket_key.arn}"
  pipeline_count = "${var.pipeline_count}"
  naming_suffix  = "${local.naming_suffix}"
  namespace      = "${var.namespace}"
}

module "reference_data_pipeline" {
  source         = "git::ssh://git@gitlab.digital.homeoffice.gov.uk:2222/dacc-dq/dq-tf-reference-data-pipeline.git"
  kms_key_s3     = "${aws_kms_key.bucket_key.arn}"
  pipeline_count = "${var.pipeline_count}"
  naming_suffix  = "${local.naming_suffix}"
  namespace      = "${var.namespace}"
}

module "consolidated_schedule_pipeline" {
  source         = "git::ssh://git@gitlab.digital.homeoffice.gov.uk:2222/dacc-dq/dq-tf-consolidated-schedule-pipeline.git"
  kms_key_s3     = "${aws_kms_key.bucket_key.arn}"
  pipeline_count = "${var.pipeline_count}"
  naming_suffix  = "${local.naming_suffix}"
  namespace      = "${var.namespace}"
}

module "api_input_pipeline" {
  source         = "git::ssh://git@gitlab.digital.homeoffice.gov.uk:2222/dacc-dq/dq-tf-api-input-pipeline.git"
  kms_key_s3     = "${aws_kms_key.bucket_key.arn}"
  pipeline_count = "${var.pipeline_count}"
  naming_suffix  = "${local.naming_suffix}"
  namespace      = "${var.namespace}"
}

module "api_record_level_score_pipeline" {
  source         = "git::ssh://git@gitlab.digital.homeoffice.gov.uk:2222/dacc-dq/dq-tf-api-record-level-score-pipeline.git"
  kms_key_s3     = "${aws_kms_key.bucket_key.arn}"
  pipeline_count = "${var.pipeline_count}"
  naming_suffix  = "${local.naming_suffix}"
  namespace      = "${var.namespace}"
}

module "api_cross_record_scored_pipeline" {
  source         = "git::ssh://git@gitlab.digital.homeoffice.gov.uk:2222/dacc-dq/dq-tf-api-cross-record-score-pipeline.git"
  kms_key_s3     = "${aws_kms_key.bucket_key.arn}"
  pipeline_count = "${var.pipeline_count}"
  naming_suffix  = "${local.naming_suffix}"
  namespace      = "${var.namespace}"
}

module "gait_pipeline" {
  source         = "git::ssh://git@gitlab.digital.homeoffice.gov.uk:2222/dacc-dq/dq-tf-gait-pipeline.git"
  kms_key_s3     = "${aws_kms_key.bucket_key.arn}"
  pipeline_count = "${var.pipeline_count}"
  naming_suffix  = "${local.naming_suffix}"
  namespace      = "${var.namespace}"
}

module "internal_reporting_pipeline" {
  source                       = "git::ssh://git@gitlab.digital.homeoffice.gov.uk:2222/dacc-dq/dq-tf-internal-reporting-pipeline.git"
  lambda_subnet                = "${module.lambda.lambda_subnet}"
  lambda_subnet_az2            = "${module.lambda.lambda_subnet_az2}"
  lambda_sgrp                  = "${module.lambda.lambda_sgrp}"
  rds_db_name                  = "${var.rds_db_name}"
  rds_internal_tableau_address = "${module.internal_tableau.rds_internal_tableau_address}"
  kms_key_s3                   = "${aws_kms_key.bucket_key.arn}"
  pipeline_count               = "${var.pipeline_count}"
  naming_suffix                = "${local.naming_suffix}"
  namespace                    = "${var.namespace}"
}

module "mds_extractor" {
  source                       = "git::ssh://git@gitlab.digital.homeoffice.gov.uk:2222/dacc-dq/dq-tf-mds-extractor.git"
  lambda_subnet                = "${module.lambda.lambda_subnet}"
  lambda_subnet_az2            = "${module.lambda.lambda_subnet_az2}"
  lambda_sgrp                  = "${module.lambda.lambda_sgrp}"
  server                       = "${module.data_ingest.rds_mds_address}"
  kms_key_s3                   = "${aws_kms_key.bucket_key.arn}"
  pipeline_count               = "${var.pipeline_count}"
  naming_suffix                = "${local.naming_suffix}"
  namespace                    = "${var.namespace}"
}

module "external_tableau" {
  source                = "github.com/UKHomeOffice/dq-tf-external-tableau-test"
  appsvpc_id            = "${aws_vpc.appsvpc.id}"
  acp_prod_ingress_cidr = "10.5.0.0/16"

  #dq_ops_ingress_cidr              = "${var.route_table_cidr_blocks["ops_cidr"]}"
  opssubnet_cidr_block             = "${var.route_table_cidr_blocks["ops_cidr"]}"
  dq_external_dashboard_subnet     = "10.1.14.0/24"
  dq_external_dashboard_subnet_az2 = "10.1.15.0/24"
  peering_cidr_block               = "10.3.0.0/16"
  apps_vpc_id                      = "${aws_vpc.appsvpc.id}"
  route_table_id                   = "${aws_route_table.apps_route_table.id}"
  az                               = "${var.az}"
  az2                              = "${var.az2}"
  naming_suffix                    = "${local.naming_suffix}"

  #s3_archive_bucket_name           = "${aws_s3_bucket.data_archive_bucket.id}"
  #s3_archive_bucket                = "${aws_s3_bucket.data_archive_bucket.arn}"
  #s3_archive_bucket_key            = "${aws_kms_key.bucket_key.arn}"
}

module "internal_tableau" {
  source                                = "github.com/UKHomeOffice/dq-tf-internal-tableau-test"
  apps_vpc_id                           = "${aws_vpc.appsvpc.id}"
  acp_prod_ingress_cidr                 = "10.5.0.0/16"
  dq_ops_ingress_cidr                   = "${var.route_table_cidr_blocks["ops_cidr"]}"
  dq_internal_dashboard_subnet_cidr     = "10.1.12.0/24"
  dq_internal_dashboard_subnet_cidr_az2 = "10.1.13.0/24"
  peering_cidr_block                    = "10.3.0.0/16"
  apps_vpc_id                           = "${aws_vpc.appsvpc.id}"
  route_table_id                        = "${aws_route_table.apps_route_table.id}"
  az                                    = "${var.az}"
  az2                                   = "${var.az2}"
  naming_suffix                         = "${local.naming_suffix}"

  #s3_archive_bucket_name                = "${aws_s3_bucket.data_archive_bucket.id}"
  #s3_archive_bucket                     = "${aws_s3_bucket.data_archive_bucket.arn}"
  #s3_archive_bucket_key                 = "${aws_kms_key.bucket_key.arn}"
}

#module "data_feeds" {
#  source                           = "github.com/ukhomeoffice/dq-tf-datafeeds"
#  appsvpc_id                       = "${aws_vpc.appsvpc.id}"
#  data_pipe_apps_cidr_block        = "10.1.8.0/24"
#  opssubnet_cidr_block             = "${var.route_table_cidr_blocks["ops_cidr"]}"
#  data_feeds_cidr_block            = "10.1.4.0/24"
#  data_feeds_cidr_block_az2        = "10.1.5.0/24"
#  peering_cidr_block               = "10.3.0.0/16"
#  dq_database_cidr_block_secondary = ["${module.gpdb-secondary.dq_database_cidr_block_secondary}"]
#  key_name                         = "test_instance"
#  az                               = "${var.az}"
#  az2                              = "${var.az2}"
#  naming_suffix                    = "${local.naming_suffix}"
#  route_table_id                   = "${aws_route_table.apps_route_table.id}"
#}

module "data_ingest" {
  source                           = "github.com/ukhomeoffice/dq-tf-dataingest-test"
  appsvpc_id                       = "${aws_vpc.appsvpc.id}"
  data_pipe_apps_cidr_block        = "10.1.8.0/24"
  opssubnet_cidr_block             = "${var.route_table_cidr_blocks["ops_cidr"]}"
  data_ingest_cidr_block           = "10.1.6.0/24"
  data_ingest_rds_cidr_block       = "10.1.7.0/24"
  peering_cidr_block               = "10.3.0.0/16"
  i#dq_database_cidr_block_secondary = ["${module.gpdb-secondary.dq_database_cidr_block_secondary}"]
  dp_web_private_ip                = "10.1.6.100"
  key_name                         = "test_instance"
  az                               = "${var.az}"
  az2                              = "${var.az2}"
  naming_suffix                    = "${local.naming_suffix}"
  route_table_id                   = "${aws_route_table.apps_route_table.id}"
  logging_bucket_id                = "${aws_s3_bucket.log_archive_bucket.id}"
  archive_bucket                   = "${aws_s3_bucket.data_archive_bucket.arn}"
  archive_bucket_name              = "${aws_s3_bucket.data_archive_bucket.id}"
  apps_buckets_kms_key             = "${aws_kms_key.bucket_key.arn}"
}

#module "data_pipeline" {
#  source                           = "github.com/UKHomeOffice/dq-tf-datapipeline"
#  appsvpc_id                       = "${aws_vpc.appsvpc.id}"
#  appsvpc_cidr_block               = "${var.cidr_block}"
#  opssubnet_cidr_block             = "${var.route_table_cidr_blocks["ops_cidr"]}"
#  data_pipe_apps_cidr_block        = "10.1.8.0/24"
#  data_pipe_rds_cidr_block         = "10.1.9.0/24"
#  peering_cidr_block               = "10.3.0.0/16"
#  dq_database_cidr_block_secondary = ["${module.gpdb-secondary.dq_database_cidr_block_secondary}"]
#  dp_web_private_ip                = "10.1.8.100"
#  key_name                         = "test_instance"
#  az                               = "${var.az}"
#  az2                              = "${var.az2}"
#  naming_suffix                    = "${local.naming_suffix}"
#  route_table_id                   = "${aws_route_table.apps_route_table.id}"
#  archive_bucket                   = "${aws_s3_bucket.data_archive_bucket.arn}"
#  bucket_key                       = "${aws_kms_key.bucket_key.arn}"
#}

#module "gpdb-secondary" {
#  source                        = "github.com/UKHomeOffice/dq-tf-gpdb-secondary"
#  appsvpc_id                    = "${aws_vpc.appsvpc.id}"
#  internal_dashboard_cidr_block = "10.1.12.0/24"
#  external_dashboard_cidr_block = "10.1.14.0/24"
#  data_ingest_cidr_block        = "10.1.6.0/24"
#  data_pipe_apps_cidr_block     = "10.1.8.0/24"
#  data_feeds_cidr_block         = "10.1.4.0/24"
#  opssubnet_cidr_block          = "${var.route_table_cidr_blocks["ops_cidr"]}"
#  peering_cidr_block            = "10.3.0.0/16"
#  az                            = "${var.az}"
#  naming_suffix                 = "${local.naming_suffix}"
#  route_table_id                = "${aws_route_table.apps_route_table.id}"
#  archive_bucket                = "${aws_s3_bucket.data_archive_bucket.arn}"
#  apps_buckets_kms_key          = "${aws_kms_key.bucket_key.arn}"
#}

resource "aws_vpc" "appsvpc" {
  cidr_block           = "${var.cidr_block}"
  enable_dns_hostnames = true

  tags {
    Name = "vpc-${local.naming_suffix}"
  }
}

resource "aws_route_table" "apps_route_table" {
  vpc_id = "${aws_vpc.appsvpc.id}"

  tags {
    Name = "route-table-${local.naming_suffix}"
  }
}

resource "aws_route" "ops" {
  route_table_id            = "${aws_route_table.apps_route_table.id}"
  destination_cidr_block    = "${var.route_table_cidr_blocks["ops_cidr"]}"
  vpc_peering_connection_id = "${var.vpc_peering_connection_ids["peering_to_ops"]}"
}

resource "aws_route" "peering" {
  route_table_id            = "${aws_route_table.apps_route_table.id}"
  destination_cidr_block    = "${var.route_table_cidr_blocks["peering_cidr"]}"
  vpc_peering_connection_id = "${var.vpc_peering_connection_ids["peering_to_peering"]}"
}

resource "aws_route" "nat" {
  route_table_id         = "${aws_route_table.apps_route_table.id}"
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = "${aws_nat_gateway.appsnatgw.id}"
}

resource "aws_route_table" "apps_public_route_table" {
  vpc_id = "${aws_vpc.appsvpc.id}"

  tags {
    Name = "public-route-table-${local.naming_suffix}"
  }
}

resource "aws_route" "igw" {
  route_table_id         = "${aws_route_table.apps_public_route_table.id}"
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = "${aws_internet_gateway.AppsRouteToInternet.id}"
}

resource "aws_eip" "appseip" {
  vpc = true
}

resource "aws_nat_gateway" "appsnatgw" {
  allocation_id = "${aws_eip.appseip.id}"
  subnet_id     = "${aws_subnet.public_subnet.id}"

  tags {
    Name = "natgw-${local.naming_suffix}"
  }
}

resource "aws_internet_gateway" "AppsRouteToInternet" {
  vpc_id = "${aws_vpc.appsvpc.id}"

  tags {
    Name = "igw-${local.naming_suffix}"
  }
}

resource "aws_subnet" "public_subnet" {
  vpc_id                  = "${aws_vpc.appsvpc.id}"
  cidr_block              = "${var.public_subnet_cidr_block}"
  map_public_ip_on_launch = false
  availability_zone       = "${var.az}"

  tags {
    Name = "public-subnet-${local.naming_suffix}"
  }
}

resource "aws_route_table_association" "public_subnet" {
  subnet_id      = "${aws_subnet.public_subnet.id}"
  route_table_id = "${aws_route_table.apps_public_route_table.id}"
}

resource "aws_default_security_group" "default" {
  vpc_id = "${aws_vpc.appsvpc.id}"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
